syntax = "proto3";

import "google/protobuf/timestamp.proto";

package internal;

message RunDetails {
    google.protobuf.Timestamp queue_time = 1;
    google.protobuf.Timestamp start_time = 2;
    google.protobuf.Timestamp end_time = 3;
    string error = 4;
}

message RScript {
    string rscript_path = 1;
    repeated string renv = 3;
}

message RScriptResult {
    string output = 1;
    int32 exit_code = 2;
}


message Job {
    uint64 id = 1;

    enum StatusType {
        QUEUED = 0;
        RUNNING = 1;
        COMPLETED = 2;
        ERROR = 3;
    }

    StatusType status = 2;
    RunDetails run_details = 3; 
    string context = 4;
    RScript rscript = 5;
    RScriptResult result = 6;
}
